Updated secret provider class

--- a/ingress-rules/chirpstack-secretproviderclass.yaml
+++ b/ingress-rules/chirpstack-secretproviderclass.yaml
@@ -9,17 +9,14 @@ spec:
   - secretName: chirpstack
     type: kubernetes.io/tls
     data:
-    - objectName: chirpstack
-      objectType: certificate
-      objectVersion: "latest"  # Adjust version if needed
-      key: tls.crt
+    - objectName: chirpstack  # Specify only the certificate name
+      key: tls.crt  # TLS certificate key
   parameters:
-    usePodIdentity: "false" # Use managed identity or service principal if needed
-    keyvaultName: "us-iotreporting-dev"
+    usePodIdentity: "false"  # Change to "true" if using Managed Identity
+    keyvaultName: "us-iotreporting-dev"  # Name of your Azure KeyVault
     cloudName: "AzurePublicCloud"
     objects: |
       array:
         - |
-          objectName: chirpstack
-          objectType: certificate
-          objectVersion: "latest"
+          objectName: chirpstack  # The name of the certificate in KeyVault
+          objectType: "certificate"  # This should specify it's a certificate
