--- a/ingress-rules/chirpstack-ingress.yaml
+++ b/ingress-rules/chirpstack-ingress.yaml
@@ -21,4 +21,4 @@ spec:
   tls:
   - hosts:
     - cpmfgopschirpstack.eastus.cloudapp.azure.com
-    secretName: chirpstack
+    secretName: chirpstack-tls-secret
