--- a/cert-manager/chirpstack-ingress.yaml
+++ b/cert-manager/chirpstack-ingress.yaml
@@ -21,8 +21,8 @@ spec:
             name: chirpstack
             port:
               number: 8080
-      - path: /.well-known/acme-challenge/  # Add the path for ACME challenge
-        pathType: Prefix
+      - path: /.well-known/acme-challenge/*  # Match exactly the ACME challenge path
+        pathType: Exact
         backend:
           service:
             name: cm-acme-http-solver-rtwdk  # The service handling the ACME challenge
