Yay static port maybe?

--- a/cert-manager/cluster-issuer.yaml
+++ b/cert-manager/cluster-issuer.yaml
@@ -12,3 +12,6 @@ spec:
     - http01:
         ingress:
           class: nginx
+        service:
+          name: cm-acme-http-solver
+          port: 8089
